--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Coding Quiz Challenge</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body>
+    <div class="container">
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code related questions withing the time limit.</p>
+        <p>Keep in mind that incorrect answers will penalize your score/time</p>
+        <p>by ten seconds!</p>
+        <div class="wrapper">
+            <div class="start-button" aria-role="" aria-label="start-button">
+                <button class="Start-Quiz">
+                    Start-Quiz
+                </button>
+            </div>
+        </div>
+    </div>
+    <script src="./assets/js/script.js"></script>
+</body>
